# electronic-shop

./: .gitignore  README.md  catalog_data.json  groups.json  product_data.json  pyproject.toml
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_slug_alter_blogpost_views.py  0003_alter_blogpost_views.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: fill.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0002_version.py  0003_product_user.py  0004_alter_product_options_product_published.py
catalog/templates/catalog/: base.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templates/catalog/includes/: inc_main_menu.html
config/: settings.py  urls.py
users/: forms.py  views.py
users/migrations/: 0001_initial.py  0002_user_token.py
