[tool.poetry]
name = "Konstanin Sobolev"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2-binary = "^2.9.9"
black = "^24.4.0"
pillow = "^10.3.0"
ipython = "^8.23.0"
pytils = "^0.4.1"
django = "4.2.2"
certifi = "^2024.2.2"
update = "^0.0.1"
redis = "^5.0.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"